# Krako-2.0

./: .gitignore  Makefile  README.md  pyproject.toml
docs/spec/: Krako 2.0 Billing & Credit Model V1.0.md  Krako 2.0 Documentation Roadmap V0.md  Krako 2.0 Domain Model (ddd Core) V0.md  Krako 2.0 Kora ↔ Krako Interface Specification V0.md  Krako 2.0 Llm Pod Specification V1.0.md  Krako 2.0 Master Architecture Overview V1.0.md  Krako 2.0 Node Agent Protocol V1.0.md  Krako 2.0 Node Identity & Trust Model V1.0.md  Krako 2.0 Risk & Attack Scenarios Review V0.md  Krako 2.0 Scheduler Specification V1.0.md  Krako 2.0 System Architecture Specification V1.0.md  Krako 2.0 Task Graph Specification V1.0.md  Krako 2.0 Telemetry & Event Specification V1.0.md  Krako 2.0 Vision & Positioning V0.md  Krako 2.0 WorkUnit Specification V1.0.md
scripts/: e2e_demo.py  replay_events.py
src/krako2/agent/: agent.py  claim_index.py  runner.py
src/krako2/api/: main.py
src/krako2/autoscaling/: controller.py  metrics.py  state.py
src/krako2/billing/: anomaly.py  consumer.py  money.py  storage.py
src/krako2/domain/: models.py
src/krako2/llm/: client.py
src/krako2/scheduler/: retry.py  (+4 more)
tests/: test_admission_enforcement.py  test_agent_loop.py  test_agent_metrics.py  test_autoscaling_controller.py  test_autoscaling_from_registry.py  test_billing_anomaly.py  test_billing_idempotency.py  test_claim_index.py  test_heartbeat_trust.py  test_llm_lane.py  test_llm_reporting.py  test_registry_heartbeat.py  test_retry_controls.py  test_scheduler_heuristics.py  test_session_id_propagation.py
(+3 files in other folders)
