[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "krako2"
version = "0.1.0"
description = "Minimal Krako 2.0 runtime skeleton"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "pydantic>=2.6.0",
  "uvicorn>=0.27.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]
